--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
 body {
-    background-color: rgb(217,110,114)
+    background-color: rgb(240, 240, 240);
+    width: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
   
   #header {
     position: relative;
+    background-color: white;
+    font-size: 24px;
   }
   
   #hero {
@@ -13,10 +19,11 @@ body {
   #about {
     padding-top: 15px;
     padding-left: 1%;
-    width: 50%;
-    color: white;
-    font-size: large;
+    width: 60%;
+    color: rgb(221,147,0);
+    font-size: 20px;
     text-align: justify;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   }
   
   #logo {
@@ -25,44 +32,59 @@ body {
   
   .navigation {
    position: absolute;
-   top: 0;
-   right: 0; 
-   border-style: solid;
-   color: white;
+   top: 65%;
+   right: 0;
   }
   
   a {
     padding: 20px;
     margin: 10px;
-    color: white;
-    width: 25%;
-    font-size: medium;
+    color: black;
+    width: 100%;
   }
   
   #selfie {
     width: 400px;
     position: absolute;
+    border-style: solid;
+    border-width: 12px;
+    border-radius: 10px;
+    border-color:rgb(176, 115, 97)
   }
   
   #selfiecontainer {
     width: 45%;
-    position: absolute;
+    float: right;
     right: 0;
     padding-top: 0px;
-    margin: -200px;
+    margin: -300px;
   }
   
-  .footer {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
-  
-  #resume {
-    position: absolute;
-    padding-top: 400px;
-    padding-bottom: 25px;
+  .footerContainer {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 60% 40%;
     padding-left: 1%;
+  }
+
+  #socialHandles {
+    padding-left: 33%;
+    padding-top: 20%;
+    width: 75%;
+    display: inline-block;
+  }
+
+  #resume {
+    padding-top: 20px;
+  }
+
+  .Heading {
+    font-size: 20px;
+    font-weight: 20px;
+  }
+
+  .resumeText {
+    margin: 2px;
   }
 
   a:link {
@@ -70,14 +92,23 @@ body {
   }
 
   #headings {
-      color: lightgray;
-      padding-top: 5%;
+      color: rgb(21,39,39);
+      padding-top: 0%;
       padding-left: 1%;
-      font-size:larger;
+      font-size: 65px;
   }
 
+  h1 {
+    margin-bottom: 0px;
+  }
+  h2 {
+    margin-top: 0px;
+    margin-bottom: 15px;
+  }
+
+
   p {
-      color: white;
+      color: rgb(21,39,39);
   }
 
   button {
@@ -87,4 +118,127 @@ body {
       text-align: center;
       padding: 10px 15px;
   }
+
+  .allButton {
+    width: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+/* My UX Skills section coded using CSS flex */
+
+.flexContainer {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  margin: 10px;
+  padding-top: 0px;
+  margin-top: 0px;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+h3 {
+  font-size: 60px;
+  padding-top: 330px;
+  padding-left: 1%;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+h4 {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 5px; 
+}
+
+.skill {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flexChild {
+  width: 33%;
+}
+
+.skillsText {
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* My UX Work section using CSS grid */
+
+.workGrid {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 25% 75%;
+}
+
+h5 {
+  font-size: 60px;
+  padding-top: 0px;
+  padding-left: 1%;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  margin-top: 50px;
+}
+
+h6 {
+  font-size: 24px;
+}
+
+
+.gridImages {
+  width: 25vw;
+}
+
+.info {
+  margin-top: -20px;
+}
+
+
+/* media query */
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: white;
+  }
+
+  .flexContainer {
+    flex-direction: column;
+  }
+
+  .containerImages {
+    width: 100vw;
+  }
+
+  .skillsText {
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .flexChild {
+    width: 100%;
+  }
+
+  .workGrid {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 100%;
+    margin-left: 15px;
+    padding-bottom: 5px;
+  }
+
+  .gridImages {
+    width: 100vw;
+  }
+
+  .allButton {
+    width: 90%;
+  }
+
+}
+
+
+
 
